Reorganizando o arquivo Pom.